# tomaz-example

./: .gitignore  CMakeLists.txt  README.md  setup.sh
data/: 250-SetA-with-rate.csv  combined_original_rows.csv  combined_signal_rows.csv  convert_error.md  error.txt  histogram.ipynb  luminosity.ipynb  process_weights.csv  process_weights_cleaned.csv
data/.ipynb_checkpoints/: 250-SetA-with-rate-checkpoint.csv  (+3 more)
example/: CMakeLists.txt
input_files/: Dirac-Dst-E250-e2e2h_inv.eL.pR_bg-00001.root  Dirac-Dst-E250-e2e2h_inv.eL.pR_bg-00002.root  Dirac-Dst-E250-e2e2h_inv.eL.pR_bg-00003.root  Dirac-Dst-E250-e2e2h_inv.eL.pR_bg-00004.root  Dirac-Dst-E250-e2e2h_inv.eL.pR_bg-00005.root  Dirac-Dst-E250-e2e2h_inv.eL.pR_bg-00006.root  Dirac-Dst-E250-e2e2h_inv.eL.pR_bg-00007.root  Dirac-Dst-E250-e2e2h_inv.eL.pR_bg-00008.root  Dirac-Dst-E250-e2e2h_inv.eL.pR_bg-00009.root  Dirac-Dst-E250-e2e2h_inv.eL.pR_bg-00010.root  Dirac-Dst-E250-e2e2h_inv.eL.pR_bg-00011.root  Dirac-Dst-E250-e2e2h_inv.eL.pR_bg-00012.root
output_files/: background_20251027_155534_hist.root  background_20251027_160036_hist.root  background_20251104_043808_hist.root  background_20251105_022905_hist.root  background_20251112_045553_hist.root  background_20251210_022749_hist.root  background_20251215_010554_hist.root  background_20251222_002023_hist.root  background_20251222_154147_hist.root  background_hist.root  output_minimal.root  signal_20251104_043801_hist.root  signal_20251221_052544_hist.root  signal_20251222_002016_hist.root  signal_hist.root
scripts/: init.sh
ssh/: config.sh  ssh_desy.sh
(+348 files in other folders)
